--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.scss">
-    <script src="java.js"></script>
+    <script src="javaScript.js"></script>
     <title>Webb</title>
 </head>
 <body>
