--- a/src/sass.html
+++ b/src/sass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.scss">
-    <script src="javaScript.js"></script>
+    <script src="javaScript.js" type="module"></script>
     <title>SASS</title>
 </head>
 <body>
@@ -32,9 +32,9 @@
     </nav>
     </header>
     <main>
-        <section id="evaluation">
-            <h2>Evaluation of SASS</h2>
-            <!-- Your evaluation content here -->
+        <section>
+            <h2>Utvärdering av SASS</h2>
+            
         </section>
     </main>
 
