--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.scss">
-    <script src="javaScript.js"></script>
+    <script src="javaScript.js" type="module"></script>
     <title>Webb</title>
 </head>
 <body>
@@ -31,9 +31,10 @@
     </nav>
 </header>
     <main>
+        <div class="content">
             <img src="images/image1.jpg?width=200" alt="Image1">
             <img src="images/image2.jpg?width=200" alt="Image2">
-        
+        </div>
     </main>
 
     <footer>
