--- a/src/sass.html
+++ b/src/sass.html
@@ -32,9 +32,32 @@
     </nav>
     </header>
     <main>
-        <section>
-            <h2>Utvärdering av SASS</h2>
-            
+        <section class="evaluation">
+            <h1>Utvärdering av arbete med SASS</h1>
+
+            <p>
+                Att arbeta med SASS har fört med sig flera fördelar och några utmaningar. Nedan följer en översikt över mina observationer:
+            </p>
+
+            <h2>Fördelar med SASS:</h2>
+            <ul>
+                <li><strong>Ökad effektivitet:</strong> Användningen av variabler och mixins har ökat effektiviteten i kodskrivningen och minskat upprepning av kod.</li>
+                <li><strong>Nestning:</strong> Möjligheten att bädda in CSS-regler inuti varandra har förbättrat läsbarheten och strukturen i koden.</li>
+                <li><strong>Mixins och Selector Inheritance:</strong> Återanvändbara mixins och möjligheten att ärva stilar med <code>@extend</code> har minskat kodens omfattning.</li>
+                <li><strong>Partials och Filstruktur:</strong> Användningen av partials har bidragit till en bättre filstruktur och överskådlighet i projektet.</li>
+                <li><strong>Color Functions:</strong> Darken och lighten har varit användbara för att skapa dynamiska färgscheman och teman.</li>
+            </ul>
+
+            <h2>Nackdelar med SASS:</h2>
+            <ul>
+                <li><strong>Inlärningskurva:</strong> För att dra full nytta av SASS-funktionerna krävs en viss inlärningskurva, särskilt för de som är nya inom CSS-preprocessorer.</li>
+                <li><strong>Komplexitet:</strong> I vissa fall kan överdriven användning av nesting leda till överdriven och svårhanterlig CSS.</li>
+                <li><strong>Kompatibilitet:</strong> Det kan finnas kompatibilitetsproblem om webbläsaren inte stöder SASS direkt, vilket kräver kompilering till ren CSS.</li>
+            </ul>
+
+            <p>
+                Sammantaget har arbetet med SASS varit en positiv erfarenhet, och de fördelar det ger överväger de små utmaningarna. Den ökade flexibiliteten och organisationen som SASS erbjuder har varit värdefullt för detta projekt.
+            </p>
         </section>
     </main>
 
