--- a/src/sass.html
+++ b/src/sass.html
@@ -24,7 +24,7 @@
             
         <ul>
             <li><a href="index.html">STARTSIDAN</a></li>
-            <li><a href="#omoss">OM OSS</a></li>
+            <li><a href="#service">SERVICE</a></li>
             <li><a href="#bild">BILD</a></li>
             <li><a href="#information">INFORMATION</a></li>
             <li><a href="sass.html">SASS</a></li>
@@ -32,7 +32,7 @@
     </nav>
     </header>
     <main>
-        <section class="evaluation">
+        <section class="content">
             <h1>Utvärdering av arbete med SASS</h1>
 
             <p>
