--- a/src/sass.html
+++ b/src/sass.html
@@ -41,8 +41,8 @@
 
             <h2>Fördelar med SASS:</h2>
             <ul>
-                <li><strong>Ökad effektivitet:</strong> Användningen av variabler och mixins har ökat effektiviteten i kodskrivningen och minskat upprepning av kod.</li>
-                <li><strong>Nestning:</strong> Möjligheten att bädda in CSS-regler inuti varandra har förbättrat läsbarheten och strukturen i koden.</li>
+                <li><strong> Förbättrad produktivitet:</strong> Genom att använda variabler och mixins har jag kunnat öka effektiviteten i min kod och minska onödig upprepning.</li>
+                <li><strong>Nestning:</strong> Genom att använda nestning för att bädda in CSS-regler har jag skapat en mer läsbar och organiserad kodstruktur. Det gör det enklare att följa koden och förstå dess hierarki.</li>
                 <li><strong>Mixins och Selector Inheritance:</strong> Återanvändbara mixins och möjligheten att ärva stilar med <code>@extend</code> har minskat kodens omfattning.</li>
                 <li><strong>Partials och Filstruktur:</strong> Användningen av partials har bidragit till en bättre filstruktur och överskådlighet i projektet.</li>
                 <li><strong>Color Functions:</strong> Darken och lighten har varit användbara för att skapa dynamiska färgscheman och teman.</li>
@@ -52,11 +52,11 @@
             <ul>
                 <li><strong>Inlärningskurva:</strong> För att dra full nytta av SASS-funktionerna krävs en viss inlärningskurva, särskilt för de som är nya inom CSS-preprocessorer.</li>
                 <li><strong>Komplexitet:</strong> I vissa fall kan överdriven användning av nesting leda till överdriven och svårhanterlig CSS.</li>
-                <li><strong>Kompatibilitet:</strong> Det kan finnas kompatibilitetsproblem om webbläsaren inte stöder SASS direkt, vilket kräver kompilering till ren CSS.</li>
+                <li><strong>Kompatibilitet:</strong> Kompatibilitetsfrågor kan uppstå om webbläsaren inte direkt stöder SASS och kräver kompilering till ren CSS. Trots dessa potentiella utmaningar har arbetet med SASS varit en givande upplevelse. Fördelarna med ökad flexibilitet och bättre organisation väger tydligt över de mindre hinder som kan uppstå.</li>
             </ul>
 
             <p>
-                Sammantaget har arbetet med SASS varit en positiv erfarenhet, och de fördelar det ger överväger de små utmaningarna. Den ökade flexibiliteten och organisationen som SASS erbjuder har varit värdefullt för detta projekt.
+                SASS har bidragit till att förbättra projektet genom att erbjuda en mer effektiv och organiserad arbetsmetod. Den ökade flexibiliteten och organisationen som SASS erbjuder har varit värdefullt för detta Momentet.
             </p>
         </section>
     </main>
